fix touch event

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ $(".demo_view").append("<p>Running Time:"+(new Date - start) / 1000 + " Seconds<
         </div>
         <footer class="footer">
         <div class="container">
-          <span class="footer-bland">&copy;2016. Design by Pofang Hsu</span>
+          <span class="footer-bland">&copy;2016. Design by Po-fang Hsu</span>
         </div>
       </footer>
     </body>
