--- a/index.html
+++ b/index.html
@@ -184,11 +184,16 @@
 
         </div>
         </div>
-        <footer class="footer">
-        <div class="container">
-          <span class="footer-bland">&copy;2016. Design by Po-fang Hsu</span>
-        </div>
-      </footer>
+        <footer>
+          <div class="row">
+              <div class="col-md-12 text-center">
+                    <div class="footer-btm">
+                          <span class="footer-bland">&copy;2016. Design by Po-fang Hsu</span>
+                    </div>
+              </div>
+          </div>
+        </footer>
+        
     </body>
   <link rel=stylesheet type="text/css" href="css/labyrinth.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
