--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 
         </div>
         </div>
+        <div class="divide60"></div>
         <footer>
           <div class="row">
               <div class="col-md-12 text-center">
