--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <footer>
           <div class="row">
               <div class="col-md-12 text-center">
-                    <div class="footer-btm" style="background-color: #0c0c0c;">
+                    <div class="footer-btm" style="background-color: #ffffff;">
                           <span class="footer-bland">&copy;2016. Design by Po-fang Hsu</span>
                     </div>
               </div>
