--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         </div>
         <div class="divide60"></div>
         <div class="divide60"></div>
+        <div class="divide60"></div>
         <footer>
           <div class="row">
               <div class="col-md-12 text-center">
