--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <div class="divide60"></div>
         <div class="divide60"></div>
         <div class="divide60"></div>
+        <div class="divide60"></div>    
         <footer>
           <div class="row">
               <div class="col-md-12 text-center">
