--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="row">
               <div class="col-md-12 text-center">
                     <div class="footer-btm" style="background-color: #ffffff;">
-                          <span class="footer-bland">&copy;2016. Design by Po-fang Hsu</span>
+                          <span class="footer-bland">&copy;2016. Design by PF</span>
                     </div>
               </div>
           </div>
