--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <div class="card-content col-2">
            <h1 class="card-title"></h1>
            <p class="card-text"></p>
-           <p>3.<code>Encrypt:</code> </p>
+           <p>2.<code>Encrypt:</code> </p>
            <pre><code>void Encrypt(BYTE block[], BYTE key[], int keyLen) {
                       int l = keyLen, i;
                       printBytes(block, 16);
@@ -195,7 +195,7 @@
           <div class="row">
               <div class="col-md-12 text-center">
                     <div class="footer-btm" style="background-color: #ffffff;">
-                          <span class="footer-bland">&copy;2016. Design by PF</span>
+                          <span class="footer-bland">&copy;2016. Design by Daniel Hsu</span>
                     </div>
               </div>
           </div>
